# Plushie

./: README.md  package.plushie.json  pyproject.toml
src/plushie/: __init__.py  __main__.py
src/plushie/cli/: configuration.py
src/plushie/cli/commands/: install.py
src/plushie/components/: config.py  install.py  uninstall.py
src/plushie/components/commands/: uninstall.py
src/plushie/components/utils/constants/: package.py
src/plushie/console/: application.py  config.py
src/plushie/console/commands/: install.py  uninstall.py
src/plushie/console/utils/constants/: application.py
src/plushie/github/api/: client.py  config.py  rest.py
src/plushie/github/api/clients/: contents.py  releases.py  repos.py
src/plushie/github/api/helpers/: urls.py
src/plushie/github/api/structs/: asset.py  content.py  release.py  repo.py
src/plushie/github/api/utils/constants/: rest.py
src/plushie/structs/: executable.py  package.py
