[tool.poetry]
name = "plushie"
version = "0.1.0"
description = "Package Manager"
authors = ["mmlvgx <mmlvgx@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "plushie", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
cleo = "^2.0.1"

[tool.poetry.scripts]
plushie = "src.plushie.console.application:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
