[tool.poetry]
name = "plushie"
version = "0.1.0"
description = "Package Manager"
authors = ["mmlvgx <mmlvgx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cleo = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
